--- a/src/App.css
+++ b/src/App.css
@@ -182,35 +182,39 @@
   position: relative;
 }
 
-.reviewsContainer{
+.reviewsContainer {
   top: -800px;
   position: relative;
+  overflow: hidden;
+  width: 100%;
 }
-.reviewsTitle{
+
+.reviewsTitle {
   font-size: 32px;
   font-weight: 700;
   line-height: 38.4px;
   text-align: left;
   margin-left: 45px;
 }
-.reviewsPictures{
+
+.reviewsPictures {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   margin-left: 45px;
-  position: relative;
+  overflow-x: hidden;
 }
 
-.reviewsPicture{
-  width: 418.5px;
+.reviewsPicture {
+  width: 450px;
   height: 744px;
-  top: 18px;
-  left: 44px;
-  gap: 0px;
-  opacity: 0px;
-  background: rgba(217, 217, 217, 1);
+  background: rgb(202, 202, 202);
   margin-top: 50px;
+  flex-shrink: 0;
+  opacity: 1;
+  overflow: hidden;
+  margin-right: 250px;
 }
+
 
 .services-container {
   display: flex;
@@ -318,6 +322,12 @@
   justify-content: space-between;
 }
 
+.age-input{
+ max-width: 210px;
+}
+.city-input{
+  max-width: 370px;
+}
 
 .form-section button {
   width: 220px;
@@ -448,8 +458,194 @@
   .headerInfo{
     background-image: url('./images/doctor.jpeg');
     background-size: cover;
+    position: relative;
+    height: 430px;
+    display: flex;
+    justify-content: flex-start;
   }
-  .headerInfo::after{
+  .headerInfo::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-color: rgba(11, 189, 62, 0.31);
   }
+  .title{
+    font-size: 41px;
+    font-weight: 700;
+    line-height: 55.2px;
+    text-align: left;
+    margin-left: 0;
+    margin-bottom: 80px;
+  }
+
+  .achievement{
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 25.2px;
+    text-align: left;
+    margin-top: 20px;
+    display: flex;
+    align-items: start;
+  }
+
+  .reviewsContainer {
+    top: -800px;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+  }
+  
+  .reviewsTitle {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 38.4px;
+    text-align: left;
+    margin-left: 45px;
+  }
+  
+  .reviewsPictures {
+    display: flex;
+    flex-direction: row;
+    margin-left: 45px;
+    overflow-x: hidden;
+  }
+  
+  .reviewsPicture {
+    width: 250px;
+    height: 484px;
+    background: rgb(202, 202, 202);
+    margin-top: 50px;
+    flex-shrink: 0;
+    opacity: 1;
+    overflow: hidden;
+    margin-right: 50px;
+  }
+   .services-container{
+    top: 50px;
+    margin-top: 100px;
+    flex-direction: column;
+    height: 500px;
+  }
+  .services-list{
+    margin-left: 0;
+    margin-bottom: 30px;
+  }
+  .services-title h2{
+    font-size: 30px;
+    font-weight: 800;
+    line-height: 42.36px;
+    text-align: left;
+    margin-right: 100px;
+  }
+  .service-item{
+    width: 410px;
+    margin-left: 150px;
+  }
+  .appointment-container{
+    height: 494px;
+  }
+
+  .info-section{
+    margin-left: 20px;
+    margin-bottom: 50px;
+  }
+  .info-section h2{
+    font-size: 25px;
+    font-weight: 800;
+    line-height: 30.26px;
+    text-align: left;
+  }
+  .info-section li {
+    display: flex;
+    align-items: center;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 38.4px;
+    text-align: left;
+  }
+  .info-section li img {
+    margin-right: 15px;
+  }
+  
+  .info-section li::before {
+    margin-right: 10px;
+    color: red;
+  }
+  .form-section{
+    width: 390px;
+    margin-left: 0;
+    margin-top: 1300px;
+  }
+  .form-section input {
+    width: 390px;
+    height: 80px;
+    top: 3012px;
+    left: 162px;
+    gap: 0px;
+    border-radius: 40px;
+    opacity: 0px;
+    border: none;
+    margin-top: 20px;
+  }
+  .age-input{
+    max-width: 120px;
+  }
+  .city-input{
+    max-width: 250px;
+  }
+  .half-input {
+    display: flex;
+    justify-content: space-between;
+  }
+  .form-section button {
+    width: 150px;
+    height: 42px;
+    top: 3466px;
+    left: 337px;
+    gap: 0px;
+    border-radius: 15px;
+    opacity: 0px;
+    background: rgba(250, 255, 0, 1);
+    border: 0.5px solid rgba(0, 0, 0, 1);
+    margin-top: 60px;
+  }
+  .footer-container{
+    margin-top: 870px;
+    height: 445px;
+    flex-direction: column-reverse;
+  }
+  .footer-adresses{
+    order: 1;
+  }
+  .footer-links img{
+    width: 40px;
+    height: 40px;
+    margin-left: 20px;
+  }
+  .footer-links{
+    justify-content: flex-end;
+  }
+  .diseases{
+    display: none;
+  }
+  .headerDoctorContainer{
+    display: none;
+  }
+  .bubbles-container{
+    display: none;
+  }
+  .achievement-list{
+    top: 1px;
+  }
+  .reviewsContainer{
+    top: 50px
+  }
+  .appointment-container{
+    top: 50px;
+    margin-top: 100px;
+  }
+ 
 }
